--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
   </script>
   
   <!-- Metadados para compartilhamento em redes sociais -->
-  <meta property="og:title" content="ThiagoNET" />
-  <meta property="og:description" content="Agência de desenvolvimento web." />
+  <meta property="og:title" content="A Financeira" />
+  <meta property="og:description" content="Instituição financeira especializada em consórcios." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://afinanceira.com.br" />
   <meta property="og:image" content="https://afinanceira.com.br/af.svg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="ThiagoNET" />
-  <meta name="twitter:description" content="Agência de desenvolvimento web." />
+  <meta name="twitter:title" content="A Financeira" />
+  <meta name="twitter:description" content="Instituição financeira especializada em consórcios." />
   <meta name="twitter:image" content="https://afinanceira.com.br/af.svg" />
 </head>
 <body>
