--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/af.svg" />
+  <link rel="icon" type="image/svg+xml" href="/af.png" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -38,13 +38,13 @@
   <meta property="og:description" content="Instituição financeira especializada em consórcios." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://afinanceira.com.br" />
-  <meta property="og:image" content="https://afinanceira.com.br/af.svg" />
+  <meta property="og:image" content="https://afinanceira.com.br/af.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="A Financeira" />
   <meta name="twitter:description" content="Instituição financeira especializada em consórcios." />
-  <meta name="twitter:image" content="https://afinanceira.com.br/af.svg" />
+  <meta name="twitter:image" content="https://afinanceira.com.br/af.png" />
 </head>
 <body>
   <div id="root"></div>
