--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <meta property="og:title" content="A Financeira" />
   <meta property="og:description" content="Instituição financeira especializada em consórcios." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://afinanceira.com.br" />
+  <meta property="og:url" content="https://afinanceira.com.br/" />
   <meta property="og:image" content="https://afinanceira.com.br/af.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
