subindo primeiro visual03

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <!-- Metadados para compartilhamento em redes sociais -->
   <meta property="og:title" content="A Financeira" />
-  <meta property="og:description" content="Instituição financeira especializada em consórcios." />
+  <meta property="og:description" content="Venha fazer seu consórcio." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://afinanceira.com.br/" />
   <meta property="og:image" content="https://afinanceira.com.br/af.png" />
